--- a/docker/yarn/Dockerfile
+++ b/docker/yarn/Dockerfile
@@ -1,39 +1,30 @@
 FROM node:7.10.0
 
-
-# Install yarn
-
-# ADD ../yarn-latest.tar.gz /opt/
-# RUN mv /opt/dist /opt/yarn
-
-
-# ADD package.json yarn.lock /tmp/
-
-# Copy cache contents (if any) from local machine
-# ADD .yarn-cache.tgz /
-
-# Install packages
-# RUN cd /tmp && yarn
-# RUN mkdir -p /opt/app && cd /opt/app && ln -s /tmp/node_modules
-
-# tar yarn-demo:latest czf - /root/.yarn-cache/ > .yarn-cache.tgz
-
-
-VOLUME ["/var/app"]
-
-# ADD yarn-latest.tar.gz /var/app
-
-# RUN ls -l /var/app /var/app/yarn-latest.tar.gz
-
+# Make a directory for Yarn to live in.
 RUN mkdir -p /opt
 
-# Copy the code
+# Make the docker folder appear inside the container
 ADD . /opt/app
 
+# chdir into /opt/app
 WORKDIR /opt/app
 
+# Extract yarn into the /opt/app/dist directory
 RUN tar -xvf yarn-latest.tar.gz
 
+# Make Yarn be findable on the path
 ENV PATH "$PATH:/opt/app/dist/bin"
 
+# Mount the mapped directory at runtime
+VOLUME ["/var/app"]
+VOLUME ["/var/app/node_modules"]
+
+
+WORKDIR /var/app
+
+# RUN yarn
+
+# CMD cd /var/app && yarn install --check-files && yarn run dev:build:watch
+
 CMD tail -f /var/app/readme.MD
+
