--- a/docker/yarn/Dockerfile
+++ b/docker/yarn/Dockerfile
@@ -20,11 +20,11 @@ VOLUME ["/var/app"]
 VOLUME ["/var/app/node_modules"]
 
 
-WORKDIR /var/app
-
-# RUN yarn
+WORKDIR /var/app/
 
 CMD cd /var/app && yarn install --check-files && yarn run dev:build:watch
 
+# For debugging, not having yarn run constantly can be nice.
+# Switching the real CMD to this makes life easier.
 # CMD tail -f /var/app/readme.MD
 
