--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "babel-preset-react": "^6.24.1",
     "babili-webpack-plugin": "^0.0.11",
     "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-config": "^7.0.0",
     "webpack-dev-server": "^2.4.5",
